# Turtle_investment_framework

./: .env.sample  .gitignore  CHANGELOG_V2.md  README.md  init.sh  pyproject.toml  requirements.txt
.claude/commands/: business-analysis.md  download-annual-report.md  turtle-analysis.md  valuation.md
.claude/skills/turtle-analysis/: SKILL.md
ciguttprepare/: 烟蒂股分析Prompt_v1.7.md
prompts/: CHANGELOG.md
scripts/: akshare_provider.py  config.py  data_provider.py  download_report.py  report_to_html.py  screener_core.py  split_data_pack.py  tushare_collector.py  valuation_engine.py
scripts/tushare_modules/: financials.py
shared/qualitative/: coordinator.md  coordinator_v2.md  data_collection.md  qualitative_assessment.md  qualitative_assessment_v2.md
shared/qualitative/agents/: agent_a_d1d2.md  agent_b_d3d4d5.md  agent_summary.md  writing_style.md
shared/qualitative/references/: framework_guide.md  framework_scope.md  judgment_examples.md  market_rules_hk.md  market_rules_us.md  output_schema.md
shared/qualitative/templates/: dashboard.html
shared/qualitative/variants/narrative/: README.md  (+1 more)
strategies/turtle/: coordinator.md  phase3_preflight.md  phase3_quantitative.md  phase3_valuation.md
strategies/turtle/references/: factor_interface.md  judgment_examples_turtle.md
strategies/valuation/: coordinator.md  phase2_valuation.md
strategies/valuation/references/: classification_rules.md  report_template.md  valuation_examples.md  valuation_methods.md
tests/: test_config.py  test_data_provider.py  test_phase1b_prompt.py  test_refresh_market.py
(+4 files in other folders)
