[project]
name = "turtle-investment-framework"
version = "0.1.0"
description = "AI-assisted A-share/HK stock fundamental analysis framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tushare>=1.2.89",
    "pandas>=1.5.0",
    "pdfplumber>=0.9.0",
    "requests>=2.28.0",
    "pytest>=7.0.0",
    "pyarrow>=10.0.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.60.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "jinja2>=3.0.0",
    "yfinance>=0.2.0",
    "akshare>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
